--- a/fire-calendar/index.html
+++ b/fire-calendar/index.html
@@ -21,11 +21,226 @@ h1, h2 { margin-top: 32px; }
 
 <h2>Privacy Policy</h2>
 
-<p>Текст политики сюда…</p>
+<p> Политика конфиденциальности (Privacy Policy)
+
+Приложение: «Служебный календарь»
+Разработчик: Redloem
+Дата вступления в силу: 3 февраля 2026
+
+⸻
+
+1. Общие положения
+
+Настоящая Политика конфиденциальности описывает, какие данные могут обрабатываться при использовании мобильного приложения «Служебный календарь».
+
+Используя приложение, пользователь подтверждает согласие с условиями настоящей Политики.
+
+⸻
+
+2. Какие данные могут обрабатываться
+
+2.1. Данные, вводимые пользователем
+
+Приложение позволяет создавать:
+	•	записи календаря;
+	•	заметки;
+	•	служебные напоминания.
+
+Эти данные:
+	•	хранятся локально на устройстве пользователя;
+	•	либо в используемых облачных сервисах, если это предусмотрено функциональностью.
+
+Регистрация пользователя не требуется.
+
+⸻
+
+2.2. Геолокация
+
+Приложение может запрашивать доступ к местоположению только по инициативе пользователя, например для отображения карты.
+
+Геолокация не используется для отслеживания и не передаётся разработчику.
+
+⸻
+
+2.3. Технические данные
+
+Автоматически могут обрабатываться обезличенные технические данные:
+	•	модель устройства;
+	•	версия iOS;
+	•	версия приложения;
+	•	информация об ошибках и сбоях.
+
+⸻
+
+2.4. Уведомления
+
+Для доставки уведомлений используется Apple Push Notification Service.
+
+Разработчик не получает доступа к личным уведомлениям пользователя.
+
+⸻
+
+3. Реклама
+
+Приложение может показывать рекламу, включая рекламу от третьих лиц (например, Yandex Mobile Ads SDK).
+
+Рекламные сервисы могут использовать собственные технологии обработки данных в соответствии со своими политиками конфиденциальности.
+
+⸻
+
+4. Использование данных
+
+Данные используются исключительно для:
+	•	работы приложения;
+	•	отображения календаря и карты;
+	•	отправки уведомлений;
+	•	повышения стабильности;
+	•	устранения ошибок.
+
+⸻
+
+5. Передача данных третьим лицам
+
+Разработчик не продаёт персональные данные пользователей.
+
+Передача данных возможна:
+	•	в рамках работы сторонних сервисов (карты, реклама, уведомления);
+	•	при наличии законных требований государственных органов.
+
+⸻
+
+6. Хранение и защита данных
+
+Применяются стандартные технические меры защиты, предусмотренные используемыми платформами и сервисами.
+
+⸻
+
+7. Права пользователя
+
+Пользователь вправе:
+	•	отключить уведомления в настройках iOS;
+	•	запретить доступ к геолокации;
+	•	удалить приложение и связанные с ним данные;
+	•	связаться с разработчиком по вопросам конфиденциальности.
+
+⸻
+
+8. Изменения политики
+
+Политика может обновляться.
+
+Актуальная версия всегда публикуется на странице разработчика и в приложении.
+
+⸻
+
+9. Контакты
+
+По вопросам конфиденциальности:
+
+📧 redloem@icloud.com </p>
 
 <h2>Terms of Use</h2>
 
-<p>Текст соглашения сюда…</p>
+<p> Пользовательское соглашение (Terms of Use)
+
+Приложение: «Служебный календарь»
+Разработчик: Redloem
+Дата вступления в силу: 3 февраля 2026
+
+⸻
+
+1. Общие положения
+
+Настоящее Пользовательское соглашение регулирует условия использования мобильного приложения «Служебный календарь».
+
+Устанавливая и используя приложение, пользователь подтверждает согласие с условиями настоящего соглашения.
+
+Если пользователь не согласен с условиями, он обязан прекратить использование приложения.
+
+⸻
+
+2. Назначение приложения
+
+Приложение предназначено для:
+	•	ведения служебного календаря и расписаний;
+	•	создания заметок;
+	•	отображения карт и местоположения по запросу пользователя;
+	•	получения уведомлений.
+
+Приложение не является официальным государственным или ведомственным сервисом и носит вспомогательный характер.
+
+⸻
+
+3. Доступность и работа приложения
+
+Приложение предоставляется по принципу «как есть».
+
+Разработчик не гарантирует:
+	•	бесперебойную работу приложения;
+	•	отсутствие ошибок;
+	•	абсолютную точность отображаемой информации;
+	•	соответствие приложения ожиданиям пользователя.
+
+⸻
+
+4. Ответственность
+
+Разработчик не несёт ответственности за:
+	•	прямой или косвенный ущерб, возникший при использовании приложения;
+	•	утрату данных;
+	•	последствия принятия решений на основе информации, отображаемой в приложении;
+	•	сбои, вызванные работой операционной системы или сторонних сервисов.
+
+⸻
+
+5. Реклама
+
+Приложение может отображать рекламу, включая рекламу третьих лиц (например, Yandex Mobile Ads SDK).
+
+Разработчик не несёт ответственности за содержание рекламных материалов, предоставляемых сторонними сервисами.
+
+⸻
+
+6. Обязанности пользователя
+
+Пользователь обязуется:
+	•	использовать приложение в соответствии с законодательством;
+	•	не вмешиваться в работу приложения;
+	•	не пытаться получать несанкционированный доступ к функциональности;
+	•	не осуществлять реверс-инжиниринг и обход технических ограничений.
+
+⸻
+
+7. Интеллектуальная собственность
+
+Все права на приложение, дизайн, интерфейс и программный код принадлежат разработчику.
+
+Пользователь получает неисключительное право использования приложения исключительно в личных целях.
+
+⸻
+
+8. Обновления и изменения условий
+
+Разработчик вправе:
+	•	выпускать обновления приложения;
+	•	изменять условия настоящего соглашения.
+
+Актуальная версия публикуется на официальной странице разработчика и/или в приложении.
+
+⸻
+
+9. Прекращение использования
+
+Пользователь вправе прекратить использование приложения в любое время, удалив его со своего устройства.
+
+⸻
+
+10. Контакты
+
+По вопросам, связанным с работой приложения:
+
+📧 redloem@icloud.com
+ </p>
 
 </body>
 </html>
