--- a/fire-calendar/index.html
+++ b/fire-calendar/index.html
@@ -1,246 +1,293 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Служебный календарь — Политика конфиденциальности</title>
-<style>
-body {
-  font-family: -apple-system, BlinkMacSystemFont, system-ui;
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 0 16px;
-  line-height: 1.6;
-}
-h1, h2 { margin-top: 32px; }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Служебный календарь — Политика конфиденциальности и Terms</title>
+  <style>
+    :root{
+      --bg:#0b0c10;
+      --card:#11131a;
+      --text:#e9ecf1;
+      --muted:#aab2c0;
+      --line:rgba(255,255,255,.10);
+      --link:#67b0ff;
+    }
+    @media (prefers-color-scheme: light){
+      :root{
+        --bg:#f6f7fb;
+        --card:#ffffff;
+        --text:#0b0c10;
+        --muted:#5a6374;
+        --line:rgba(0,0,0,.10);
+        --link:#0a66ff;
+      }
+    }
+
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      background:var(--bg);
+      color:var(--text);
+      font:16px/1.6 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
+    }
+    .wrap{
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 28px 16px 60px;
+    }
+    .card{
+      background:var(--card);
+      border:1px solid var(--line);
+      border-radius:16px;
+      padding:22px 18px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.08);
+    }
+    h1{
+      font-size:28px;
+      line-height:1.2;
+      margin:0 0 10px;
+      letter-spacing:-0.02em;
+    }
+    .sub{
+      color:var(--muted);
+      margin:0 0 18px;
+      font-size:14px;
+    }
+    .nav{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin: 12px 0 22px;
+    }
+    .nav a{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:10px 12px;
+      border-radius:999px;
+      background:rgba(255,255,255,.06);
+      border:1px solid var(--line);
+      color:var(--text);
+      text-decoration:none;
+      font-weight:600;
+      font-size:14px;
+    }
+    @media (prefers-color-scheme: light){
+      .nav a{ background:rgba(0,0,0,.04); }
+    }
+    a{ color:var(--link); }
+    hr{
+      border:none;
+      border-top:1px solid var(--line);
+      margin: 22px 0;
+    }
+    h2{
+      font-size:20px;
+      margin: 0 0 10px;
+      letter-spacing:-0.01em;
+    }
+    h3{
+      font-size:16px;
+      margin: 16px 0 8px;
+    }
+    p{ margin: 10px 0; }
+    ul{ margin: 8px 0 8px 20px; }
+    li{ margin: 6px 0; }
+    .meta{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:6px;
+      padding:12px 14px;
+      border:1px solid var(--line);
+      border-radius:12px;
+      background:rgba(255,255,255,.04);
+      color:var(--muted);
+      font-size:14px;
+    }
+    @media (prefers-color-scheme: light){
+      .meta{ background:rgba(0,0,0,.03); }
+    }
+    .meta b{ color:var(--text); font-weight:600; }
+    .toplink{
+      display:inline-block;
+      margin-top:14px;
+      font-size:14px;
+      color:var(--muted);
+      text-decoration:none;
+    }
+    .toplink:hover{ color:var(--text); }
+    code{
+      background:rgba(255,255,255,.08);
+      padding:2px 6px;
+      border-radius:8px;
+      border:1px solid var(--line);
+      font-size: 0.95em;
+    }
+  </style>
 </head>
-
 <body>
-
-<h1>Служебный календарь</h1>
-
-<h2>Privacy Policy</h2>
-
-<p> Политика конфиденциальности (Privacy Policy)
-
-Приложение: «Служебный календарь»
-Разработчик: Redloem
-Дата вступления в силу: 3 февраля 2026
-
-⸻
-
-1. Общие положения
-
-Настоящая Политика конфиденциальности описывает, какие данные могут обрабатываться при использовании мобильного приложения «Служебный календарь».
-
-Используя приложение, пользователь подтверждает согласие с условиями настоящей Политики.
-
-⸻
-
-2. Какие данные могут обрабатываться
-
-2.1. Данные, вводимые пользователем
-
-Приложение позволяет создавать:
-	•	записи календаря;
-	•	заметки;
-	•	служебные напоминания.
-
-Эти данные:
-	•	хранятся локально на устройстве пользователя;
-	•	либо в используемых облачных сервисах, если это предусмотрено функциональностью.
-
-Регистрация пользователя не требуется.
-
-⸻
-
-2.2. Геолокация
-
-Приложение может запрашивать доступ к местоположению только по инициативе пользователя, например для отображения карты.
-
-Геолокация не используется для отслеживания и не передаётся разработчику.
-
-⸻
-
-2.3. Технические данные
-
-Автоматически могут обрабатываться обезличенные технические данные:
-	•	модель устройства;
-	•	версия iOS;
-	•	версия приложения;
-	•	информация об ошибках и сбоях.
-
-⸻
-
-2.4. Уведомления
-
-Для доставки уведомлений используется Apple Push Notification Service.
-
-Разработчик не получает доступа к личным уведомлениям пользователя.
-
-⸻
-
-3. Реклама
-
-Приложение может показывать рекламу, включая рекламу от третьих лиц (например, Yandex Mobile Ads SDK).
-
-Рекламные сервисы могут использовать собственные технологии обработки данных в соответствии со своими политиками конфиденциальности.
-
-⸻
-
-4. Использование данных
-
-Данные используются исключительно для:
-	•	работы приложения;
-	•	отображения календаря и карты;
-	•	отправки уведомлений;
-	•	повышения стабильности;
-	•	устранения ошибок.
-
-⸻
-
-5. Передача данных третьим лицам
-
-Разработчик не продаёт персональные данные пользователей.
-
-Передача данных возможна:
-	•	в рамках работы сторонних сервисов (карты, реклама, уведомления);
-	•	при наличии законных требований государственных органов.
-
-⸻
-
-6. Хранение и защита данных
-
-Применяются стандартные технические меры защиты, предусмотренные используемыми платформами и сервисами.
-
-⸻
-
-7. Права пользователя
-
-Пользователь вправе:
-	•	отключить уведомления в настройках iOS;
-	•	запретить доступ к геолокации;
-	•	удалить приложение и связанные с ним данные;
-	•	связаться с разработчиком по вопросам конфиденциальности.
-
-⸻
-
-8. Изменения политики
-
-Политика может обновляться.
-
-Актуальная версия всегда публикуется на странице разработчика и в приложении.
-
-⸻
-
-9. Контакты
-
-По вопросам конфиденциальности:
-
-📧 redloem@icloud.com </p>
-
-<h2>Terms of Use</h2>
-
-<p> Пользовательское соглашение (Terms of Use)
-
-Приложение: «Служебный календарь»
-Разработчик: Redloem
-Дата вступления в силу: 3 февраля 2026
-
-⸻
-
-1. Общие положения
-
-Настоящее Пользовательское соглашение регулирует условия использования мобильного приложения «Служебный календарь».
-
-Устанавливая и используя приложение, пользователь подтверждает согласие с условиями настоящего соглашения.
-
-Если пользователь не согласен с условиями, он обязан прекратить использование приложения.
-
-⸻
-
-2. Назначение приложения
-
-Приложение предназначено для:
-	•	ведения служебного календаря и расписаний;
-	•	создания заметок;
-	•	отображения карт и местоположения по запросу пользователя;
-	•	получения уведомлений.
-
-Приложение не является официальным государственным или ведомственным сервисом и носит вспомогательный характер.
-
-⸻
-
-3. Доступность и работа приложения
-
-Приложение предоставляется по принципу «как есть».
-
-Разработчик не гарантирует:
-	•	бесперебойную работу приложения;
-	•	отсутствие ошибок;
-	•	абсолютную точность отображаемой информации;
-	•	соответствие приложения ожиданиям пользователя.
-
-⸻
-
-4. Ответственность
-
-Разработчик не несёт ответственности за:
-	•	прямой или косвенный ущерб, возникший при использовании приложения;
-	•	утрату данных;
-	•	последствия принятия решений на основе информации, отображаемой в приложении;
-	•	сбои, вызванные работой операционной системы или сторонних сервисов.
-
-⸻
-
-5. Реклама
-
-Приложение может отображать рекламу, включая рекламу третьих лиц (например, Yandex Mobile Ads SDK).
-
-Разработчик не несёт ответственности за содержание рекламных материалов, предоставляемых сторонними сервисами.
-
-⸻
-
-6. Обязанности пользователя
-
-Пользователь обязуется:
-	•	использовать приложение в соответствии с законодательством;
-	•	не вмешиваться в работу приложения;
-	•	не пытаться получать несанкционированный доступ к функциональности;
-	•	не осуществлять реверс-инжиниринг и обход технических ограничений.
-
-⸻
-
-7. Интеллектуальная собственность
-
-Все права на приложение, дизайн, интерфейс и программный код принадлежат разработчику.
-
-Пользователь получает неисключительное право использования приложения исключительно в личных целях.
-
-⸻
-
-8. Обновления и изменения условий
-
-Разработчик вправе:
-	•	выпускать обновления приложения;
-	•	изменять условия настоящего соглашения.
-
-Актуальная версия публикуется на официальной странице разработчика и/или в приложении.
-
-⸻
-
-9. Прекращение использования
-
-Пользователь вправе прекратить использование приложения в любое время, удалив его со своего устройства.
-
-⸻
-
-10. Контакты
-
-По вопросам, связанным с работой приложения:
-
-📧 redloem@icloud.com
- </p>
-
+  <div class="wrap">
+    <div class="card" id="top">
+      <h1>Служебный календарь</h1>
+      <p class="sub">Документы для App Store: Privacy Policy и Terms of Use</p>
+
+      <div class="nav">
+        <a href="#privacy">🔒 Privacy Policy</a>
+        <a href="#terms">📄 Terms of Use</a>
+      </div>
+
+      <div class="meta">
+        <div><b>Приложение:</b> «Служебный календарь»</div>
+        <div><b>Разработчик:</b> Redloem</div>
+        <div><b>Дата вступления в силу:</b> 3 февраля 2026</div>
+        <div><b>Контакт:</b> <a href="mailto:redloem@icloud.com">redloem@icloud.com</a></div>
+      </div>
+
+      <hr />
+
+      <!-- ===================== PRIVACY ===================== -->
+      <h2 id="privacy">Privacy Policy</h2>
+
+      <h3>1. Общие положения</h3>
+      <p>
+        Настоящая Политика конфиденциальности описывает, какие данные могут обрабатываться
+        при использовании мобильного приложения «Служебный календарь». Используя приложение,
+        пользователь подтверждает согласие с условиями настоящей Политики.
+      </p>
+
+      <h3>2. Какие данные могут обрабатываться</h3>
+
+      <h3>2.1. Данные, вводимые пользователем</h3>
+      <p>Приложение позволяет создавать:</p>
+      <ul>
+        <li>записи календаря;</li>
+        <li>заметки;</li>
+        <li>служебные напоминания.</li>
+      </ul>
+      <p>
+        Эти данные хранятся локально на устройстве пользователя (либо в используемых облачных сервисах,
+        если это предусмотрено функциональностью). Регистрация пользователя не требуется.
+      </p>
+
+      <h3>2.2. Геолокация</h3>
+      <p>
+        Приложение может запрашивать доступ к местоположению только по инициативе пользователя
+        (например, для отображения карты). Геолокация не используется для отслеживания и не передаётся разработчику.
+      </p>
+
+      <h3>2.3. Технические данные</h3>
+      <p>
+        Автоматически могут обрабатываться обезличенные технические данные: модель устройства,
+        версия iOS, версия приложения, информация об ошибках и сбоях.
+      </p>
+
+      <h3>2.4. Уведомления</h3>
+      <p>
+        Для доставки уведомлений используется Apple Push Notification Service.
+        Разработчик не получает доступа к личным уведомлениям пользователя.
+      </p>
+
+      <h3>3. Реклама</h3>
+      <p>
+        Приложение может отображать рекламу, включая рекламу от третьих лиц (например, Yandex Mobile Ads SDK).
+        Рекламные сервисы могут использовать собственные технологии обработки данных в соответствии со своими политиками конфиденциальности.
+      </p>
+
+      <h3>4. Использование данных</h3>
+      <p>Данные используются исключительно для:</p>
+      <ul>
+        <li>работы приложения;</li>
+        <li>отображения календаря и карты;</li>
+        <li>отправки уведомлений;</li>
+        <li>повышения стабильности и устранения ошибок.</li>
+      </ul>
+
+      <h3>5. Передача данных третьим лицам</h3>
+      <p>
+        Разработчик не продаёт персональные данные пользователей. Передача данных возможна:
+        в рамках работы сторонних сервисов (карты, реклама, уведомления) и при наличии законных требований государственных органов.
+      </p>
+
+      <h3>6. Хранение и защита данных</h3>
+      <p>
+        Применяются стандартные технические меры защиты, предусмотренные используемыми платформами и сервисами.
+      </p>
+
+      <h3>7. Права пользователя</h3>
+      <p>Пользователь вправе:</p>
+      <ul>
+        <li>отключить уведомления в настройках iOS;</li>
+        <li>запретить доступ к геолокации;</li>
+        <li>удалить приложение и связанные с ним данные;</li>
+        <li>связаться с разработчиком по вопросам конфиденциальности.</li>
+      </ul>
+
+      <h3>8. Изменения политики</h3>
+      <p>
+        Политика может обновляться. Актуальная версия публикуется на странице разработчика и в приложении.
+      </p>
+
+      <h3>9. Контакты</h3>
+      <p>По вопросам конфиденциальности: <a href="mailto:redloem@icloud.com">redloem@icloud.com</a></p>
+
+      <a class="toplink" href="#top">↑ Наверх</a>
+
+      <hr />
+
+      <!-- ===================== TERMS ===================== -->
+      <h2 id="terms">Terms of Use</h2>
+
+      <h3>1. Общие положения</h3>
+      <p>
+        Настоящее Пользовательское соглашение регулирует условия использования приложения «Служебный календарь».
+        Устанавливая и используя приложение, пользователь подтверждает согласие с условиями соглашения.
+        Если пользователь не согласен с условиями, он обязан прекратить использование приложения.
+      </p>
+
+      <h3>2. Назначение приложения</h3>
+      <p>Приложение предназначено для:</p>
+      <ul>
+        <li>ведения служебного календаря и расписаний;</li>
+        <li>создания заметок;</li>
+        <li>отображения карт и местоположения по запросу пользователя;</li>
+        <li>получения уведомлений.</li>
+      </ul>
+      <p>
+        Приложение не является официальным государственным или ведомственным сервисом и носит вспомогательный характер.
+      </p>
+
+      <h3>3. Доступность и работа приложения</h3>
+      <p>
+        Приложение предоставляется по принципу «как есть». Разработчик не гарантирует бесперебойную работу,
+        отсутствие ошибок, абсолютную точность отображаемой информации и соответствие ожиданиям пользователя.
+      </p>
+
+      <h3>4. Ограничение ответственности</h3>
+      <p>
+        Разработчик не несёт ответственности за прямой или косвенный ущерб, возникший в результате использования
+        или невозможности использования приложения, включая утрату данных и последствия решений, принятых на основе
+        информации, отображаемой в приложении.
+      </p>
+
+      <h3>5. Правила использования</h3>
+      <p>Пользователь обязуется:</p>
+      <ul>
+        <li>использовать приложение законно;</li>
+        <li>не предпринимать попыток вмешательства в работу приложения, реверс-инжиниринга и обхода ограничений.</li>
+      </ul>
+
+      <h3>6. Изменения</h3>
+      <p>
+        Разработчик может обновлять приложение и изменять условия соглашения. Актуальная версия публикуется по ссылке,
+        указанной в приложении.
+      </p>
+
+      <h3>7. Контакты</h3>
+      <p>По вопросам работы приложения: <a href="mailto:redloem@icloud.com">redloem@icloud.com</a></p>
+
+      <a class="toplink" href="#top">↑ Наверх</a>
+    </div>
+  </div>
 </body>
 </html>
