--- a/fire-calendar/privacy.html
+++ b/fire-calendar/privacy.html
@@ -1,95 +1,320 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Privacy Policy — Служебный календарь</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-    margin: 40px auto;
-    max-width: 900px;
-    line-height: 1.6;
-    padding: 0 16px;
-    color: #111;
-}
-h1, h2 {
-    margin-top: 32px;
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Политика конфиденциальности — Служебный календарь</title>
+  <meta name="description" content="Политика конфиденциальности приложения «Служебный календарь» (Redloem)" />
+  <style>
+    :root{
+      --bg:#0b0c10;
+      --card:#11131a;
+      --text:#e8e9ee;
+      --muted:#a7acba;
+      --line:rgba(255,255,255,.10);
+      --accent:#6aa9ff;
+      --accent2:#7ee787;
+      --danger:#ff6a6a;
+      --shadow: 0 12px 40px rgba(0,0,0,.35);
+      --radius:16px;
+      --radius2:22px;
+      --max: 980px;
+    }
+    @media (prefers-color-scheme: light){
+      :root{
+        --bg:#f6f7fb;
+        --card:#ffffff;
+        --text:#0d1020;
+        --muted:#4e5567;
+        --line:rgba(10,20,40,.10);
+        --shadow: 0 14px 40px rgba(10,20,40,.10);
+      }
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","Segoe UI",Roboto,Arial,sans-serif;
+      background:
+        radial-gradient(1200px 600px at 20% -10%, rgba(106,169,255,.25), transparent 55%),
+        radial-gradient(900px 500px at 90% 0%, rgba(126,231,135,.18), transparent 55%),
+        var(--bg);
+      color:var(--text);
+      line-height:1.65;
+    }
+    a{color:var(--accent); text-decoration:none}
+    a:hover{text-decoration:underline}
+    .wrap{max-width:var(--max); margin:0 auto; padding:28px 16px 56px;}
+    .topbar{
+      display:flex; gap:14px; align-items:flex-start; justify-content:space-between;
+      padding:18px 18px;
+      border:1px solid var(--line);
+      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
+      border-radius:var(--radius2);
+      box-shadow:var(--shadow);
+      backdrop-filter: blur(10px);
+    }
+    .brand{
+      display:flex; gap:12px; align-items:center;
+    }
+    .logo{
+      width:42px; height:42px; border-radius:12px;
+      background:linear-gradient(135deg, rgba(106,169,255,.35), rgba(126,231,135,.18));
+      border:1px solid var(--line);
+      display:grid; place-items:center;
+      font-weight:800;
+      color:var(--text);
+    }
+    .brand h1{
+      margin:0;
+      font-size:18px;
+      line-height:1.2;
+    }
+    .brand p{
+      margin:4px 0 0;
+      color:var(--muted);
+      font-size:13px;
+    }
+    .meta{
+      text-align:right;
+      color:var(--muted);
+      font-size:13px;
+      min-width: 210px;
+    }
+    .meta strong{color:var(--text); font-weight:700}
+    .grid{
+      display:grid;
+      grid-template-columns: 320px 1fr;
+      gap:16px;
+      margin-top:16px;
+      align-items:start;
+    }
+    @media (max-width: 880px){
+      .grid{grid-template-columns: 1fr}
+      .meta{text-align:left; min-width:auto}
+    }
+    .card{
+      border:1px solid var(--line);
+      background:var(--card);
+      border-radius:var(--radius2);
+      box-shadow:var(--shadow);
+      padding:18px;
+    }
+    .toc h2{margin:0 0 10px; font-size:14px; color:var(--muted); font-weight:700; letter-spacing:.02em}
+    .toc a{
+      display:flex;
+      gap:10px;
+      padding:10px 10px;
+      border-radius:12px;
+      border:1px solid transparent;
+      color:var(--text);
+    }
+    .toc a:hover{
+      border-color:var(--line);
+      background: rgba(255,255,255,.04);
+      text-decoration:none;
+    }
+    .dot{
+      width:10px; height:10px; border-radius:3px; margin-top:4px;
+      background: rgba(106,169,255,.55);
+      flex: 0 0 auto;
+    }
+    .section{
+      padding:4px 0 0;
+    }
+    .section h2{
+      margin:10px 0 6px;
+      font-size:18px;
+      line-height:1.25;
+    }
+    .section p{margin: 8px 0; color: var(--text)}
+    .section ul{
+      margin: 8px 0 0 18px;
+      padding:0;
+      color: var(--text);
+    }
+    .badge{
+      display:inline-flex; align-items:center; gap:8px;
+      border:1px solid var(--line);
+      background: rgba(255,255,255,.04);
+      padding:8px 10px;
+      border-radius:999px;
+      color:var(--muted);
+      font-size:13px;
+      margin-top:10px;
+    }
+    .badge b{color:var(--text)}
+    .pill{
+      display:inline-flex; align-items:center;
+      padding:3px 10px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background: rgba(255,255,255,.04);
+      color: var(--muted);
+      font-size:12px;
+      margin-left:6px;
+    }
+    .callout{
+      border:1px solid var(--line);
+      background: linear-gradient(180deg, rgba(106,169,255,.10), rgba(255,255,255,.03));
+      border-radius:var(--radius2);
+      padding:14px 14px;
+      margin: 12px 0 0;
+    }
+    .callout h3{margin:0 0 6px; font-size:14px}
+    .callout p{margin:0; color:var(--muted); font-size:13px}
+    .hr{
+      height:1px; background:var(--line); border:0; margin:18px 0;
+    }
+    .footer{
+      margin-top:16px;
+      color:var(--muted);
+      font-size:13px;
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+      align-items:center;
+      justify-content:space-between;
+    }
+    code.k{
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+      font-size: 12px;
+      padding: 2px 8px;
+      border-radius: 999px;
+      border: 1px solid var(--line);
+      background: rgba(255,255,255,.04);
+      color: var(--text);
+    }
+  </style>
 </head>
+
 <body>
+  <div class="wrap">
+    <div class="topbar">
+      <div class="brand">
+        <div class="logo">RC</div>
+        <div>
+          <h1>Политика конфиденциальности</h1>
+          <p>Приложение «Служебный календарь» <span class="pill">Redloem</span></p>
+          <div class="badge">
+            <span>Дата вступления в силу:</span> <b>3 февраля 2026</b>
+          </div>
+        </div>
+      </div>
+      <div class="meta">
+        <div><strong>Контакт:</strong> <a href="mailto:redloem@icloud.com">redloem@icloud.com</a></div>
+        <div style="margin-top:6px;">Документ: <code class="k">privacy.html</code></div>
+      </div>
+    </div>
 
-<h1>Политика конфиденциальности</h1>
+    <div class="grid">
+      <div class="card toc">
+        <h2>Содержание</h2>
+        <a href="#general"><span class="dot"></span><span>1. Общие положения</span></a>
+        <a href="#data"><span class="dot"></span><span>2. Какие данные обрабатываются</span></a>
+        <a href="#ads"><span class="dot"></span><span>3. Реклама</span></a>
+        <a href="#use"><span class="dot"></span><span>4. Использование данных</span></a>
+        <a href="#sharing"><span class="dot"></span><span>5. Передача третьим лицам</span></a>
+        <a href="#security"><span class="dot"></span><span>6. Хранение и защита</span></a>
+        <a href="#rights"><span class="dot"></span><span>7. Права пользователя</span></a>
+        <a href="#changes"><span class="dot"></span><span>8. Изменения политики</span></a>
+        <a href="#contacts"><span class="dot"></span><span>9. Контакты</span></a>
 
-<p><strong>Приложение:</strong> «Служебный календарь»<br>
-<strong>Разработчик:</strong> Redloem<br>
-<strong>Дата вступления в силу:</strong> 3 февраля 2026</p>
+        <div class="callout">
+          <h3>Коротко</h3>
+          <p>Основные данные (календарь/заметки) — у тебя на устройстве. Геолокация — только по запросу. Разработчик не продаёт персональные данные.</p>
+        </div>
+      </div>
 
-<h2>1. Общие положения</h2>
-<p>Настоящая Политика конфиденциальности описывает, какие данные могут обрабатываться при использовании мобильного приложения «Служебный календарь». Используя приложение, пользователь подтверждает согласие с условиями настоящей Политики.</p>
+      <div class="card section">
+        <h2 id="general">1. Общие положения</h2>
+        <p>Настоящая Политика конфиденциальности описывает, какие данные могут обрабатываться при использовании мобильного приложения «Служебный календарь». Используя приложение, пользователь подтверждает согласие с условиями настоящей Политики.</p>
 
-<h2>2. Какие данные могут обрабатываться</h2>
+        <hr class="hr" />
 
-<h3>2.1. Данные, вводимые пользователем</h3>
-<ul>
-<li>записи календаря;</li>
-<li>заметки;</li>
-<li>служебные напоминания.</li>
-</ul>
-<p>Эти данные хранятся локально на устройстве пользователя либо в используемых облачных сервисах, если такая функция предусмотрена.</p>
+        <h2 id="data">2. Какие данные могут обрабатываться</h2>
 
-<h3>2.2. Геолокация</h3>
-<p>Приложение может запрашивать доступ к местоположению только по инициативе пользователя для отображения карты. Геолокация не используется для отслеживания и не передаётся разработчику.</p>
+        <h3>2.1. Данные, вводимые пользователем</h3>
+        <ul>
+          <li>записи календаря;</li>
+          <li>заметки;</li>
+          <li>служебные напоминания.</li>
+        </ul>
+        <p>Эти данные хранятся локально на устройстве пользователя либо в используемых облачных сервисах, если такая функциональность предусмотрена. Регистрация пользователя не требуется.</p>
 
-<h3>2.3. Технические данные</h3>
-<p>Автоматически могут обрабатываться обезличенные технические данные:</p>
-<ul>
-<li>модель устройства;</li>
-<li>версия iOS;</li>
-<li>версия приложения;</li>
-<li>информация о сбоях.</li>
-</ul>
+        <h3>2.2. Геолокация</h3>
+        <p>Приложение может запрашивать доступ к местоположению только по инициативе пользователя для отображения карты. Геолокация не используется для отслеживания и не передаётся разработчику.</p>
 
-<h3>2.4. Уведомления</h3>
-<p>Для доставки уведомлений используется Apple Push Notification Service. Разработчик не получает доступ к содержанию личных уведомлений пользователя.</p>
+        <h3>2.3. Технические данные</h3>
+        <p>Автоматически могут обрабатываться обезличенные технические данные:</p>
+        <ul>
+          <li>модель устройства;</li>
+          <li>версия iOS;</li>
+          <li>версия приложения;</li>
+          <li>информация о сбоях.</li>
+        </ul>
 
-<h2>3. Реклама</h2>
-<p>Приложение может показывать рекламу с использованием сторонних сервисов (например, Yandex Mobile Ads SDK). Такие сервисы могут обрабатывать данные в соответствии со своими политиками конфиденциальности.</p>
+        <h3>2.4. Уведомления</h3>
+        <p>Для доставки уведомлений используется Apple Push Notification Service. Разработчик не получает доступ к содержанию личных уведомлений пользователя.</p>
 
-<h2>4. Использование данных</h2>
-<p>Данные используются исключительно для:</p>
-<ul>
-<li>работы приложения;</li>
-<li>отображения календаря и карты;</li>
-<li>отправки уведомлений;</li>
-<li>повышения стабильности;</li>
-<li>устранения ошибок.</li>
-</ul>
+        <hr class="hr" />
 
-<h2>5. Передача данных третьим лицам</h2>
-<p>Разработчик не продаёт персональные данные пользователей. Передача возможна только:</p>
-<ul>
-<li>в рамках работы сторонних сервисов;</li>
-<li>по законным требованиям государственных органов.</li>
-</ul>
+        <h2 id="ads">3. Реклама</h2>
+        <p>Приложение может показывать рекламу, включая рекламу от третьих лиц (например, Yandex Mobile Ads SDK). Рекламные сервисы могут использовать собственные технологии обработки данных в соответствии со своими политиками конфиденциальности.</p>
 
-<h2>6. Хранение и защита данных</h2>
-<p>Применяются стандартные технические меры защиты, предусмотренные используемыми платформами и сервисами.</p>
+        <hr class="hr" />
 
-<h2>7. Права пользователя</h2>
-<ul>
-<li>отключить уведомления в настройках iOS;</li>
-<li>запретить доступ к геолокации;</li>
-<li>удалить приложение и связанные данные;</li>
-<li>связаться с разработчиком по вопросам конфиденциальности.</li>
-</ul>
+        <h2 id="use">4. Использование данных</h2>
+        <p>Данные используются исключительно для:</p>
+        <ul>
+          <li>работы приложения;</li>
+          <li>отображения календаря и карты;</li>
+          <li>отправки уведомлений;</li>
+          <li>повышения стабильности;</li>
+          <li>устранения ошибок.</li>
+        </ul>
 
-<h2>8. Изменения политики</h2>
-<p>Политика может обновляться. Актуальная версия всегда публикуется на странице разработчика и в приложении.</p>
+        <hr class="hr" />
 
-<h2>9. Контакты</h2>
-<p>Email: <a href="mailto:redloem@icloud.com">redloem@icloud.com</a></p>
+        <h2 id="sharing">5. Передача данных третьим лицам</h2>
+        <p>Разработчик не продаёт персональные данные пользователей. Передача данных возможна:</p>
+        <ul>
+          <li>в рамках работы сторонних сервисов (карты, реклама, уведомления);</li>
+          <li>при наличии законных требований государственных органов.</li>
+        </ul>
 
+        <hr class="hr" />
+
+        <h2 id="security">6. Хранение и защита данных</h2>
+        <p>Применяются стандартные технические меры защиты, предусмотренные используемыми платформами и сервисами.</p>
+
+        <hr class="hr" />
+
+        <h2 id="rights">7. Права пользователя</h2>
+        <p>Пользователь вправе:</p>
+        <ul>
+          <li>отключить уведомления в настройках iOS;</li>
+          <li>запретить доступ к геолокации;</li>
+          <li>удалить приложение и связанные с ним данные;</li>
+          <li>связаться с разработчиком по вопросам конфиденциальности.</li>
+        </ul>
+
+        <hr class="hr" />
+
+        <h2 id="changes">8. Изменения политики</h2>
+        <p>Политика может обновляться. Актуальная версия всегда публикуется на странице разработчика и в приложении.</p>
+
+        <hr class="hr" />
+
+        <h2 id="contacts">9. Контакты</h2>
+        <p>По вопросам конфиденциальности: <a href="mailto:redloem@icloud.com">redloem@icloud.com</a></p>
+
+        <div class="footer">
+          <span>© Redloem</span>
+          <span><a href="#top" onclick="window.scrollTo({top:0,behavior:'smooth'});return false;">Наверх ↑</a></span>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
