--- a/speedway/privacy.html
+++ b/speedway/privacy.html
@@ -85,6 +85,34 @@
     .hr{height:1px; background:var(--line); border:0; margin:18px 0;}
     .footer{margin-top:16px; color:var(--muted); font-size:13px; display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between;}
     code.k{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace; font-size:12px; padding:2px 8px; border-radius:999px; border:1px solid var(--line); background:rgba(255,255,255,.04); color:var(--text);}
+  /* ===== Mobile fix: toc not "jumping" / not eating top ===== */
+@media (max-width: 880px) {
+  .wrap { padding-top: 14px; }
+  .topbar {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 12px;
+    padding: 14px;
+  }
+  .brand { align-items: flex-start; }
+  .meta {
+    text-align: left;
+    min-width: 0;
+  }
+
+  /* grid becomes one column already, but keep toc compact */
+  .card { padding: 14px; }
+  .toc a { padding: 10px 10px; }
+  .toc .callout { margin-top: 10px; }
+
+  /* Make headings slightly smaller on phones */
+  h1 { font-size: 16px; }
+  .section h2 { font-size: 16px; }
+}
+
+/* ===== Prevent horizontal overflow on small screens ===== */
+html, body { overflow-x: hidden; }
+.section, .card, .topbar { max-width: 100%; }
   </style>
 </head>
 <body>
